[package]
name = "colorline"
version = "0.2.0"
edition = "2024"
authors = ["Pjdur"]
description = "Text coloring in Rust for terminals. Minimal and easy to use."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Pjdur/colorline"
keywords = ["ansi", "color", "terminal"]
categories = ["command-line-interface"]

[dependencies]
